fix horizontal scroll on mobile, fix tooltip, small css improvements

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -70,7 +70,7 @@
     border-radius: 3px;
 
     position: absolute;
-    z-index: 1;
+    z-index: -1;
     width: 120px;
     bottom: 100%;
     left: 50%; 
@@ -81,5 +81,6 @@
 
 .link:hover .tooltip {
     opacity: 1.0;
+    z-index: 1;
     transform: translate(0%, -20%);
 }
