--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,7 @@
 #top {
     background-color: #000;
     box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 12px -5px rgba(33, 33, 33, 0.46);
+    width: 100%;
 }
 
 #cards {
