--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
+html {
+    overflow-x: hidden; 
+}
+
 body {
+    overflow-x: hidden;
+    position: relative;
     background: #dfdfdf;
-    margin: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     font-family: Roboto,Helvetica,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
